--- a/LibraryMobile/LibraryMobile.UWP/MainPage.xaml
+++ b/LibraryMobile/LibraryMobile.UWP/MainPage.xaml
@@ -8,5 +8,6 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+		<!--moj komentarz-->
     </Grid>
 </forms:WindowsPage>
